--- a/index.html
+++ b/index.html
@@ -179,12 +179,13 @@
                                         </li>
 
                                         <li>
-                                            New Blog: <a href="https://aryav.bearblog.dev/tinybpe-a-tiny-byte-pair-encoder/">tinybpe: a tiny byte pair encoder<b></b></a>
+                                            New Blog: <a href="https://aryav.bearblog.dev/the-matrix/">The Matrix<b></b></a>
                                         </li> 
-                                        
-                                        <li>
-                                            Building GPT2 124M here: <a href="https://github.com/iamaryav/tinyGPT">
-                                                <b>tinyGPT</b></a>
+                                        <li><a href="https://github.com/iamaryav/models"> <b>models</b></a>
+                                            : Model: Pre-training, Mid-training, Post-training, Inference, RL
+                                        </li>
+                                        <li><a href="https://github.com/iamaryav/tinyGPT"><b>tinyGPT</b></a>
+                                            : A tiny implementaion of GPT2 inspired by Karpathy's minGPT
                                         </li>
                                     </ul>
                                 </td>
@@ -241,6 +242,9 @@
                             <tr>
                                 <td style="padding:10px">
                                     <ul>
+                                        <li><a href="https://github.com/iamaryav/models"> <b>models</b></a>
+                                            : Model: Pre-training, Mid-training, Post-training, Inference, RL
+                                        </li>
                                         <li><a href="https://github.com/iamaryav/tinyGPT"> <b>tinyGPT</b></a>
                                             : A tiny implementaion of GPT2 inspired by Karpathy's minGPT
                                         </li>
@@ -251,19 +255,28 @@
                                         <li><a href="https://github.com/iamaryav/opengrad"> <b>opengrad</b></a>
                                             : A small autograd engine and neural net library.
                                         </li>
+                                        <li><a href="https://github.com/iamaryav/matrix"> <b>matrix</b></a>
+                                            : Intuition about Matrix and their operations
+                                        </li>
+                                        <li><a href="https://github.com/iamaryav/ai-notebooks"><b>ai-notebooks</b></a>
+                                            : Implementing ML algorithms in Jupyter Notebook.
+                                        </li>
                                     </ul>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
 
-                    <heading>Writings</heading>
+                    <heading>Blogs</heading>
                     <hr>
                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="5">
                         <tbody>
                             <tr>
                                 <td style="padding:10px">
                                     <ul>  
+                                        <li>
+                                           <a href="https://aryav.bearblog.dev/the-matrix/">The Matrix<b></b></a>
+                                        </li>
                                         <li>
                                            <a href="https://aryav.bearblog.dev/tinybpe-a-tiny-byte-pair-encoder/">tinybpe: a tiny byte pair encoder<b></b></a>
                                         </li>
