--- a/index.html
+++ b/index.html
@@ -121,16 +121,16 @@
                                         </name>
                                     </p>
                                     <p>
-                                        Software Engineer at IBM | AI Research | Building systems that solve real-world
+                                        Software Engineer at Lowe's | AI Research | Building systems that solve real-world
                                         problems.
                                     </p>
                                     <p style="text-align:center">
-                                        <a href="https://x.com/PriyaAryav">X</a> &nbsp/&nbsp
-                                        <a href="https://github.com/iamaryav">Github</a> &nbsp/&nbsp
-                                        <a href="https://aryav.bearblog.dev/blog">Blogs</a> &nbsp/&nbsp
-                                        <a href="https://www.youtube.com/@PriyaAryav">Youtube</a> &nbsp/&nbsp
-                                        <a href="https://linkedin.com/in/priya-aryav/">LinkedIn</a> &nbsp/&nbsp
-                                        <a href="mailto:priya.aryav@gmail.com">Email</a> &nbsp/&nbsp
+                                        <a href="https://x.com/PriyaAryav">X</a> &nbsp|&nbsp
+                                        <a href="https://github.com/iamaryav">Github</a> &nbsp|&nbsp
+                                        <a href="https://aryav.bearblog.dev/blog">Blogs</a> &nbsp|&nbsp
+                                        <a href="https://www.youtube.com/@PriyaAryav">Youtube</a> &nbsp|&nbsp
+                                        <a href="https://linkedin.com/in/priya-aryav/">LinkedIn</a> &nbsp|&nbsp
+                                        <a href="mailto:priya.aryav@gmail.com">Email</a> &nbsp|&nbsp
                                         <!-- <a href="https://buymeacoffee.com/aryav">Buy me a coffee.</a> &nbsp/&nbsp -->
                                         <!-- <a href="https://topmate.io/aryav">Book a session with me</a> &nbsp/&nbsp -->
 
@@ -211,31 +211,6 @@
                         </tbody>
                     </table> -->
 
-                    <heading>Career</heading>
-                    <hr>
-                    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="5">
-                        <tbody>
-                            <tr>
-                                <td style="padding:10px">
-                                    <ul>
-                                        <li>
-                                            <p>June, 2024 - Present: <br> 
-                                                Working at IBM as a Software Engineer. </p>
-                                        </li>
-                                        <li>
-                                            <p>Oct, 2020 - June, 2024 <br>
-                                                Worked at TCS as a Software Engineer. </p>
-                                        </li>
-                                        <li>
-                                            <p>Aug, 2016 - July, 2020 <br> 
-                                                B.Tech in Computer Science & Engineering from MAKAUT university.
-                                            </p>
-                                        </li>
-                                    </ul>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
 
                     <heading>Pet Projects</heading>
                     <hr>
@@ -293,6 +268,36 @@
                                         <!-- <li>Book a session with me: <a href="topmate.io/aryav/">here</a>
                                         </li> -->
 
+                                    </ul>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                    <heading>Career</heading>
+                    <hr>
+                    <table width="100%" align="center" border="0" cellspacing="0" cellpadding="5">
+                        <tbody>
+                            <tr>
+                                <td style="padding:10px">
+                                    <ul>
+                                        <li>
+                                            <p>Dec, 2025 - Present<br> 
+                                                Working at Lowe's as a Software Engineer. </p>
+                                        </li>
+                                        <li>
+                                            <p>June, 2024 - Dec, 2025<br> 
+                                                Worked at IBM as a Software Engineer. </p>
+                                        </li>
+                                        <li>
+                                            <p>Oct, 2020 - June, 2024 <br>
+                                                Worked at TCS as a Software Engineer. </p>
+                                        </li>
+                                        <li>
+                                            <p>Aug, 2016 - July, 2020 <br> 
+                                                B.Tech in Computer Science & Engineering from MAKAUT university.
+                                            </p>
+                                        </li>
                                     </ul>
                                 </td>
                             </tr>
